--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,57 @@
 # numpy==1.13.3
 # scipy==1.0
 #
+aiocache==0.11.1
+aiohttp==3.7.2
+aleph-client @ git+https://github.com/aleph-im/aleph-client.git@1016413ad8ba006e6b6afa8306aee64f8a2dec4e
+asn1crypto==1.4.0
+async-lru==1.0.2
+async-timeout==3.0.1
+attrs==20.3.0
+base58==2.0.1
+bitarray==1.2.2
+certifi==2020.11.8
+cffi==1.14.3
+chardet==3.0.4
+coincurve==13.0.0
+cytoolz==0.11.0
+eciespy==0.3.8
+eth-abi==2.1.1
+eth-account==0.5.4
+eth-hash==0.2.0
+eth-keyfile==0.5.1
+eth-keys==0.3.3
+eth-rlp==0.2.1
+eth-typing==2.2.2
+eth-utils==1.9.5
+hexbytes==0.2.1
+HiYaPyCo==0.4.16
+idna==2.10
+ipfshttpclient==0.7.0a1
+Jinja2==2.11.2
+jsonschema==3.2.0
+lru-dict==1.1.6
+MarkupSafe==1.1.1
+multiaddr==0.0.9
+multidict==5.0.0
+netaddr==0.8.0
+parsimonious==0.8.1
+poolmonitor @ file:///code
+protobuf==3.13.0
+pycparser==2.20
+pycryptodome==3.9.9
+pydantic==1.7.2
+pyrsistent==0.17.3
+python-dotenv==0.15.0
+PyYAML==5.3.1
+requests==2.24.0
+rlp==2.0.0
+secp256k1==0.13.2
+six==1.15.0
+toolz==0.11.1
+typing-extensions==3.7.4.3
+urllib3==1.25.11
+varint==1.0.2
+web3==5.13.0
+websockets==8.1
+yarl==1.6.2
